--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,22 @@
+name: Build
 
+on: [push, pull_request]
+
+jobs:
+  build-macos-amd64:
+    runs-on: macos-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build macos-amd64
+      run: |
+        scripts/build-macos-amd64.sh
+
+  build-dedicated-macos-amd64:
+    runs-on: macos-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build dedicated macos-amd64
+      run: |
+        scripts/build-macos-amd64.sh -d
