--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,14 +3,14 @@ name: Build
 on: [push, pull_request]
 
 jobs:
-  build-macos-amd64:
-    runs-on: macos-latest
+#  build-macos-amd64:
+#    runs-on: macos-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build macos-amd64
-      run: |
-        scripts/build-macos-amd64.sh
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Build macos-amd64
+#      run: |
+#        scripts/build-macos-amd64.sh
 
   build-macos-arm:
     runs-on: macos-14
@@ -20,12 +20,13 @@ jobs:
     - name: Build macos-arm
       run: |
         scripts/build-macos-arm.sh
-
-  build-dedicated-macos-amd64:
-    runs-on: macos-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build dedicated macos-amd64
+    - name: Create artifacts dir
       run: |
-        scripts/build-macos-amd64.sh -d
+          mkdir -p ./artifacts
+          cd ./artifacts
+          cp -r ../build ../portal_game ./
+    - uses: actions/upload-artifact@v2
+      if: ${{ always() }}
+      with:
+        path: ./artifacts
+        if-no-files-found: error
